# dala

./: .gitignore  .tool-versions  AGENTS.md  BUILD_INTEGRATION.md  CLAUDE.md  CODE_REVIEW_SUMMARY.md  C_TO_RUST_COMPLETE.md  C_TO_RUST_CONVERSION.md  Cargo.toml  Elixir.TestNif.beam  FIXES_SUMMARY.md  IMPROVEMENTS_SUMMARY.md  LICENSE-APACHE  LICENSE-MPL2.0  NOTICE  PLAN.md  PLUGIN_ARCHITECTURE_SUMMARY.md  README.md  RUST_CONVERSION.md  TEST_SUMMARY.md  TEST_WEBVIEW_API.md  WEBVIEW_IMPLEMENTATION_SUMMARY.md  app_store_plan.md  future_developments.md  issues.md  mise.toml  mix.exs  play_store_plan.md  run_tests.sh  skill-generate-screen-dsl.md  test_rust.sh  test_webview_api.sh  wire_tap.md
.cargo/: config.toml
.github/workflows/: onboarding.yml  test-rust.yml
android/: proguard-rules.pro
android/jni/: Android.mk  dala_beam.c  dala_beam.h  driver_tab_android.c
android/jni/rust/: Cargo.toml  build.rs  build_android.sh
android/jni/rust/src/: driver_tab.rs  header.rs  lib.rs
android/jni/rust/tests/: simple_test.rs
assets/css/: design.css
assets/js/: design_canvas.js
dala/: IMPLEMENTATION_SUMMARY.md  ML_INTEGRATION_SUMMARY.md
dev_tools/: INTERACTIVE_PREVIEW.md
dev_tools/dala/: preview.ex
docs/: android_ble_integration.md  bluetooth_wifi_implementation.md  ios_ble_implementation.md  ios_bluetooth_setup.md
docs/decisions/: 001-json-render-pipeline.md
docs/reference/: AGENTS.md  ARCHITECTURE.md  BUILD_INTEGRATION.md  IMPLEMENTATION_SUMMARY.md  RESTRUCTURE_REPORT.md  RESTRUCTURE_SUMMARY.md  RESTRUCTURING_SUMMARY.md  WEBVIEW_IMPLEMENTATION_SUMMARY.md  issues.md  liveview_notes.md
examples/: README.md  webview_interact.examples.md
examples/demo_app/: mix.exs
examples/ml_app/: mix.exs
examples/ml_models_app/: mix.exs
examples/simple_app/: mix.exs
guides/: CATALOG.md  README.md  agentic_coding.md  architecture.md  binary_protocol.md  build_and_beam_loading.md  components.md  data.md  device_capabilities.md  emlx_ios_summary.md  event_audit.md  event_model.md  events.md  ex_burn.md  getting_started.md  gpu_compute.md  gpu_render_pipeline.md  ios_ml_support.md  ios_physical_device.md  liveview.md  media_runtime.md  navigation.md  plugin_architecture.md  publishing.md  render_engine.md  rustler_complete.md  rustler_in_dala.md  rustler_in_mob.md  rustler_message_sending.md  screen_lifecycle.md  screen_manager_pubsub.md  security.md  spark_dsl.md  storage.md  styling.md  testing.md  theming.md  troubleshooting.md  ui_design.md  ui_render_pipeline.md  (+1 more)
ios/: DalaAppDelegate.swift.template  DalaBluetooth.swift  DalaBluetoothCInterface.m  DalaBluetoothManager.h  DalaBluetoothManager.m  DalaCoreMLCInterface.m  DalaCoreMLManager.h  DalaCoreMLManager.m  DalaDemo-Bridging-Header.h  DalaMotionCInterface.m  DalaMotionManager.h  DalaMotionManager.m  DalaNFCCInterface.m  DalaNFCManager.h  DalaNFCManager.m  DalaNode.h  DalaNode.m  DalaRootView.swift  DalaViewModel.swift  MobNode.h  MobNode.m  MobRootView.swift  MobViewModel.swift  dala_beam.h  dala_beam.m  driver_tab_ios.c  prepare_rust.sh  xcode_build_rust.sh
ios/rust/: Cargo.toml  (+1 more)
lib/: dala.ex
native/: ONNX_RUNTIME_SETUP.md
native/dala_beam/: CONVERSION_SUMMARY.md  Cargo.toml  README.md
native/dala_beam/src/: driver_tab_android.rs  driver_tab_ios.rs  header.rs  lib.rs  lib.rs.bak  lib.rs.bak2
native/dala_gpu/: Cargo.toml
native/dala_gpu/src/: atlas.rs  command.rs  framebuffer.rs  lib.rs  sprite.rs
native/dala_gpu/src/nif/: command.rs  mod.rs
native/dala_gpu/src/renderer/: buffer.rs  metal.rs  mod.rs  opengl.rs
native/dala_nif/: Cargo.toml  README.md
native/dala_nif/src/: android.rs  common.rs  ios.rs  lib.rs  lib.rs.bak  lib.rs.orig  lib.rs.rej  onnx.rs  protocol.rs  protocol_edge_tests.rs  tree.rs
native/dala_onnx/: Cargo.toml  build.rs
native/dala_onnx/src/: lib.rs
scripts/: android_setup.sh  ios_setup.sh
test/: dala_test.exs  debug_entity_test.exs  example_screen.ex  run_and_capture.exs  spark_test_screen.ex  test_helper.exs
(+339 files in other folders)
