[package]
name = "dala_nif"
version = "0.1.0"
authors = []
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
rustler = "0.37.4"
lazy_static = "1.5"
serde_json = "1.0"

# Platform-specific dependencies
[target.'cfg(target_os = "ios")'.dependencies]
objc = "0.2"
objc-foundation = "0.1"

[target.'cfg(target_os = "android")'.dependencies]
jni = { version = "0.21", default-features = false }
jni-sys = "0.4"
lazy_static = "1.5"
