[package]
name = "dala_onnx"
version = "0.1.0"
edition = "2021"
description = "Cross-platform ONNX Runtime C ABI wrapper for Dala"

[lib]
crate-type = ["staticlib", "cdylib"]

[features]
default = []
ios = []
android = []
coreml = []    # CoreML execution provider (iOS)
nnapi = []     # NNAPI execution provider (Android)

[dependencies]
# Future: onnxruntime-sys or similar crate for real ONNX Runtime bindings

[build-dependencies]
